<?xml version="1.0" encoding="utf-8"?>

    <ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <Button
                android:id="@+id/buttonCreateAccount"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:text="@string/create_account"
                android:layout_marginBottom="100dp"/>

            <Button
                android:id="@+id/buttonEditAccount"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:layout_marginBottom="100dp"
                android:text="@string/edit_accounts" />

            <Button
                android:id="@+id/buttonEditForms"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:layout_marginBottom="100dp"
                android:text="@string/edit_forms" />

            <Button
                android:id="@+id/buttonBack"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:text="@string/back" />
        </LinearLayout>
    </ScrollView>

